--- a/Colors.API/Colors.API.csproj
+++ b/Colors.API/Colors.API.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UseAppHost>true</UseAppHost>
   </PropertyGroup>
 
   <PropertyGroup>
